# airflow-watcher

./: .gitignore  ALERTING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  run_api.py  setup.py
.devcontainer/: devcontainer.json  post-start.sh
.github/workflows/: ci.yml  publish.yml
dags/: example_watcher_test.py
demo/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  wait_ready.py
demo/bigquery/: Dockerfile  README.md  app.py  bq_client.py  record_demo.py  run.sh
demo/dags/: data_quality_checks.py  ecommerce_sales_etl.py  ml_training_pipeline.py  nyc_taxi_analytics.py  sla_demo.py  social_media_analytics.py  stock_market_collector.py  weather_data_pipeline.py
demo/load-tests/: RESULTS.md  browser_test.py  load_test.py
demo/plugins/airflow_watcher/: __init__.py  config.py
demo/plugins/airflow_watcher/airflow_watcher/alerting/: rules.py
demo/plugins/airflow_watcher/airflow_watcher/metrics/: __init__.py  collector.py  prometheus_exporter.py
demo/plugins/airflow_watcher/airflow_watcher/models/: failure.py
demo/plugins/airflow_watcher/airflow_watcher/monitors/: __init__.py  dag_failure_monitor.py  dag_health_monitor.py  dependency_monitor.py  scheduling_monitor.py  sla_monitor.py  task_health_monitor.py
demo/plugins/airflow_watcher/airflow_watcher/notifiers/: __init__.py  slack_notifier.py
demo/plugins/airflow_watcher/airflow_watcher/plugins/: __init__.py
demo/plugins/airflow_watcher/airflow_watcher/templates/watcher/: dag_health.html  health.html  task_health.html
demo/plugins/airflow_watcher/airflow_watcher/utils/: __init__.py
demo/plugins/airflow_watcher/alerting/: __init__.py
demo/plugins/airflow_watcher/api/: __init__.py  auth.py  logging_config.py  main.py  monitor_provider.py  standalone_config.py
demo/plugins/airflow_watcher/api/routers/: cache.py  dags.py  dependencies.py  failures.py  scheduling.py  sla.py  tasks.py
demo/plugins/airflow_watcher/backends/: __init__.py  _sql_client.py  bigquery_backend.py  schema_config.py
demo/plugins/airflow_watcher/metrics/: __init__.py  collector.py  prometheus_exporter.py  statsd_emitter.py
demo/plugins/airflow_watcher/models/: __init__.py  sla.py
demo/plugins/airflow_watcher/monitors/: __init__.py  dag_failure_monitor.py  dag_health_monitor.py  dependency_monitor.py  scheduling_monitor.py  sla_monitor.py  task_health_monitor.py
demo/plugins/airflow_watcher/notifiers/: email_notifier.py  pagerduty_notifier.py  slack_notifier.py
demo/plugins/airflow_watcher/plugins/: watcher_plugin.py
demo/plugins/airflow_watcher/templates/watcher/: dashboard.html  dependencies.html  failures.html  scheduling.html  sla.html
demo/plugins/airflow_watcher/templates/watcher/components/: filter_bar.html
demo/plugins/airflow_watcher/utils/: __init__.py  cache.py  helpers.py  rbac.py
demo/plugins/airflow_watcher/views/: api.py  dashboard.py
docs/: index.html  openapi.json
src/airflow_watcher/: __init__.py  config.py
src/airflow_watcher/alerting/: __init__.py  rules.py
src/airflow_watcher/api/: auth.py  compat.py  db.py  envelope.py  logging_config.py  main.py  monitor_provider.py  rate_limit.py  rbac_dep.py  schemas.py  standalone_config.py
src/airflow_watcher/api/routers/: __init__.py  alerts.py  cache.py  dags.py  dependencies.py  failures.py  health.py  metrics.py  overview.py  scheduling.py  sla.py  tasks.py
src/airflow_watcher/backends/: __init__.py  _bq_client.py  _sql_client.py  bigquery_backend.py  schema_config.py
src/airflow_watcher/metrics/: collector.py  prometheus_exporter.py  statsd_emitter.py
src/airflow_watcher/models/: failure.py  sla.py
src/airflow_watcher/monitors/: __init__.py  dag_failure_monitor.py  dag_health_monitor.py  dependency_monitor.py  scheduling_monitor.py  sla_monitor.py  task_health_monitor.py
src/airflow_watcher/notifiers/: __init__.py  email_notifier.py  pagerduty_notifier.py  slack_notifier.py
src/airflow_watcher/plugins/: __init__.py
src/airflow_watcher/static/: .gitkeep
src/airflow_watcher/templates/watcher/: dag_health.html  dashboard.html  dependencies.html  failures.html  health.html  scheduling.html  sla.html  task_health.html
src/airflow_watcher/templates/watcher/components/: filter_bar.html
src/airflow_watcher/utils/: __init__.py  cache.py  helpers.py  rbac.py
src/airflow_watcher/views/: __init__.py  api.py  dashboard.py
tests/: __init__.py  conftest.py  test_auth.py  test_bigquery_backend.py  test_compat.py  test_config.py  test_dag_failure_monitor.py  test_dag_health_monitor.py  test_db.py  test_dependency_monitor.py  test_email_notifier.py  test_envelope.py  test_helpers.py  test_load.py  test_logging_config.py  test_main.py  test_metrics_collector.py  test_p0_p1_fixes.py  test_pagerduty_notifier.py  test_rbac.py  test_rbac_dep.py  test_routers.py  test_scheduling_monitor.py  test_schema_and_sql_backend.py  test_security.py  test_sla_monitor.py  test_slack_notifier.py  test_standalone_config.py  test_task_health_monitor.py
tests/live/: __init__.py  conftest.py  test_live_api.py  test_live_comprehensive.py  test_live_data.py  test_qa_deep.py  test_qa_plugin.py
