[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-watcher"
version = "0.1.0"
description = "Airflow UI Plugin for monitoring DAG failures and SLA misses"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Ramanujam Solaimalai", email = "ramanujam.solaimalai@gmail.com"}
]
maintainers = [
    {name = "Ramanujam Solaimalai", email = "ramanujam.solaimalai@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Apache Airflow",
]
dependencies = [
    "apache-airflow>=2.5.0",
    "flask>=2.0.0",
    "requests>=2.28.0",
    "slack-sdk>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
# Alerting integrations
pagerduty = [
    "requests>=2.28.0",
]
# Metrics backends
statsd = [
    # Uses socket - no extra deps needed
]
prometheus = [
    "prometheus-client>=0.15.0",
]
# All alerting channels
alerting = [
    "requests>=2.28.0",
    "slack-sdk>=3.19.0",
]
# Everything
all = [
    "requests>=2.28.0",
    "slack-sdk>=3.19.0",
    "prometheus-client>=0.15.0",
]

[project.entry-points."airflow.plugins"]
airflow_watcher = "airflow_watcher.plugins.watcher_plugin:AirflowWatcherPlugin"

[project.urls]
"Homepage" = "https://github.com/ram07eng/airflow-watcher"
"Bug Tracker" = "https://github.com/ram07eng/airflow-watcher/issues"
"Documentation" = "https://github.com/ram07eng/airflow-watcher#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=airflow_watcher --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
